[gd_scene load_steps=6 format=3 uid="uid://ltsaf0fx1j4f"]

[ext_resource type="Texture2D" uid="uid://c7eb4j05ygy7w" path="res://assets/Sprite-0001.png" id="1_f0vw7"]
[ext_resource type="Script" path="res://scenes/gas_btn.gd" id="1_tw1rt"]
[ext_resource type="FontFile" uid="uid://dct8501q0qoa0" path="res://assets/fonts/Kenney Pixel Square.ttf" id="3_t5d0s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkkp7"]
size = Vector2(14, 15)

[sub_resource type="LabelSettings" id="LabelSettings_awrde"]
font = ExtResource("3_t5d0s")
font_size = 8
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="GasBtn" type="Area2D" groups=["pipes"]]
script = ExtResource("1_tw1rt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f0vw7")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_gkkp7")

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -34.0
offset_right = 27.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Time : 00"
label_settings = SubResource("LabelSettings_awrde")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
